fixed quote centering on tablets

--- a/css/style.css
+++ b/css/style.css
@@ -2465,6 +2465,20 @@ blockquote {
     content: "";
 }
 
-.section-heading h2 {
+#banner-content .section-heading h2 {
     width: 60%;
+}
+
+#quotes-block {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#quotes-block .quotes {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    justify-self: center;
 }
